--- a/indyscan.io/docker-compose.yml
+++ b/indyscan.io/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     - mongo
     environment:
     - URL_MONGO=mongodb://mongo.indynet:27017
+    - INDY_NETWORKS=${INDY_NETWORKS}
     ports:
     - '3000:3000'
 
@@ -47,6 +48,7 @@ services:
     - mongo
     environment:
     - URL_MONGO=mongodb://mongo.indynet:27017
+    - INDY_NETWORKS=${INDY_NETWORKS}
     ports:
     - '3000:3000'
 
