--- a/indyscan.io/docker-compose.yml
+++ b/indyscan.io/docker-compose.yml
@@ -41,6 +41,8 @@ services:
   indyscan-daemon:
     image: pstas/indyscan-daemon:latest
     container_name: indyscan-daemon
+    volumes:
+    - ${HOME}/.indy_client:/home/indyscan/.indy_client
     networks:
     - indynet
     depends_on:
