--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     image: indyscan-daemon:latest-local
     container_name: indyscan-daemon
     volumes:
-      - ${HOME}/.indy_client:/home/indyscan/.indy_client
+      - ${HOME}/.indy_client/pool:/home/indyscan/.indy_client/pool
     networks:
     - indynet
     depends_on:
