add brave payments

--- a/indyscan.io/nginx.conf
+++ b/indyscan.io/nginx.conf
@@ -45,6 +45,11 @@ http {
     access_log /var/log/nginx/access-indyscan.log;
     error_log /var/log/nginx/error-indyscan.log;
 
+    location /.well-known/ {
+      default_type "text/plain";
+      root /var/www/indyscan.io/.well-known;
+    }
+
     location / {
         proxy_pass http://indyscan-webapp:3000;
         proxy_set_header Host $host;
