--- a/indyscan.io/docker-compose.yml
+++ b/indyscan.io/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf
     - letsencrypt_certs:/etc/letsencrypt/
+    - ./brave.txt:/var/www/indyscan.io/.well-known/
     ports:
     - '80:80'
     - '443:443'
