--- a/indyscan.io/nginx.conf
+++ b/indyscan.io/nginx.conf
@@ -45,9 +45,8 @@ http {
     access_log /var/log/nginx/access-indyscan.log;
     error_log /var/log/nginx/error-indyscan.log;
 
-    location /.well-known/ {
-      default_type "text/plain";
-      root /var/www/indyscan.io/.well-known;
+    location /.well-known/brave-rewards-verification.txt {
+      alias /var/www/indyscan.io/.well-known/brave-rewards-verification.txt;
     }
 
     location / {
